Add fat jar to gradle