@@ -4,8 +4,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-applicationDefaultJvmArgs = ["-Xloggc:/Users/bencecserna/Documents/Development/projects/real-time-search/gc.log",
-                             "-XX:+PrintGC",
+applicationDefaultJvmArgs = [
                              "-server", "-XX:+AggressiveOpts",
                              "-XX:NewSize=512m", "-XX:MaxNewSize=512m",
                              "-Xms6g",
@@ -58,5 +57,15 @@ sourceSets {
 run {
     if (project.hasProperty("appArgs")) {
         args = Eval.me(appArgs)
+    }
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
